--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
                 <p>O financiamento privado por empresas de capital de risco caiu 50%.</p>
             </div>
         </section>
+
+        <section>
+            <div>
+                <img src="./assets/images/image-retro-pcs.jpg" alt="imagem de pcs">
+                
+                <div>
+                    <strong>01</strong>
+                    <h2>Revivendo PCs antigos</h2>
+                    <p>e se PCs antigos pudessem receber peças modernas?</p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./assets/images/image-top-laptops.jpg" alt="imagem de laptop">
+                <div>
+                    <strong>02</strong>
+                    <h2>top 10 laptop de 2024.</h2>
+                    <p>Nossas melhores escolhas para diversas necessidades.</p>
+                </div>
+            </div>
+            <div>
+                <img src="./assets/images/image-gaming-growth.jpg" alt="imagem de controle de video-game">
+                <div>
+                    <strong>03</strong>
+                    <h2>O Crescimento dos Jogos</h2>
+                    <p>Como a pandemia tem gerado novas oportunidades.</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
