--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                 realmente está cumprindo sua promessa?</p>
         </section>
 
-        <section>
+        <section class="segunda-secao">
             <h2>NOVO</h2>
 
-            <div>
+            <div class="bb mb pb">
                 <h3>Hidrogênio VS Carros Elétricos</h3>
                 <p>Os carros movidos a hidrogênio alguma vez alcançarão os veículos elétricos?
                 </p>
             </div>
-            <div>
+            <div class="bb mb pb">
                 <h3>A arte gerada por IA</h3>
                 <p>Quais são os possíveis efeitos adversos da geração de imagens por IA sob demanda?</p>
             </div>
-            <div>
+            <div class="bb mb pb">
                 <h3>O VC Funding está esgotado?</h3>
                 <p>O financiamento privado por empresas de capital de risco caiu 50%.</p>
             </div>
