estilizacao do nav mobile

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         </button>
 
         <nav>
+
+            <button>
+                <img src="./assets/images/icon-menu-close.svg" alt="">
+            </button>
             <a href="#">home</a>
             <a href="#">novo</a>
             <a href="#">popular</a>
